[tool.poetry]
name = "currency-api"
version = "0.1.0"
description = ""
authors = ["DKowalski25 <dshinoda25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
